--- a/parentPhone/package.json
+++ b/parentPhone/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "babel-plugin-macros": "^3.1.0",
     "dotenv": "^16.1.4",
     "expo": "~48.0.18",
     "expo-constants": "~14.2.1",
@@ -22,7 +23,8 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0"
+    "react-native-screens": "~3.20.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
