--- a/parentPhone/package.json
+++ b/parentPhone/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -17,11 +18,14 @@
     "dotenv": "^16.1.4",
     "expo": "~48.0.18",
     "expo-constants": "~14.2.1",
+    "expo-image-picker": "~14.1.1",
     "expo-modules-core": "^1.2.7",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-date-picker": "^4.2.13",
+    "react-native-modal-datetime-picker": "^15.0.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0"
