--- a/parentPhone/package.json
+++ b/parentPhone/package.json
@@ -22,6 +22,7 @@
     "expo-modules-core": "^1.2.7",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.1",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-date-picker": "^4.2.13",
