--- a/parentPhone/package.json
+++ b/parentPhone/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/elements": "^1.3.18",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.17",
     "babel-plugin-macros": "^3.1.0",
     "dotenv": "^16.1.4",
     "expo": "~48.0.18",
